Fix debian-branch for gbp.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 gnome-shell-extension-redshift (0~20141101.git3091f6f-2) unstable; urgency=medium
 
   * debian/gbp.conf: Use upstream-vcs-tag for gbp.
+  * debian/gbp.conf: Fix debian-branch for gbp.
 
  --
 
