--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-shell-extension-redshift (3.20.1-1) unstable; urgency=medium
+
+  * New upstream release. (Closes: #824704)
+
+ --
+
 gnome-shell-extension-redshift (3.18.1-1) unstable; urgency=medium
 
   * New upstream release. (Closes: #801887)
